Implement currentColor support for CSS gradients https://bugs.webkit.org/show_bug.cgi?id=58730

Patch by David Barr <davidbarr@chromium.org> on 2011-09-30
Reviewed by Adam Barth.

Source/WebCore:

Allow currentColor as a CSS3 gradient color-stop.

Test: fast/css/linear-gradient-currentcolor.html

* css/CSSGradientValue.cpp:
(WebCore::CSSGradientValue::isCacheable): Make currentColor uncacheable since the
background image may be invalidated if currentColor is used as a gradient stop and
the value of the 'color' property changes.
* css/CSSParser.cpp:
(WebCore::parseGradientColorOrKeyword): Accept the currentColor keyword.
* rendering/style/StyleGeneratedImage.cpp:
(WebCore::StyleGeneratedImage::image): Initialize document styleSelector so that
currentColor may be computed for a StyleGeneratedImage.

LayoutTests:

* fast/css/linear-gradient-currentcolor-expected.txt: Added.
* fast/css/linear-gradient-currentcolor.html: Added.
* platform/chromium/test_expectations.txt:
* platform/mac/fast/css/linear-gradient-currentcolor-expected.png: Added.

Canonical link: https://commits.webkit.org/85211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96449 268f45cc-cd09-0410-ab3c-d52691b4dbfc