Source/WebCore/rendering/style/StyleGeneratedImage.cpp
@@ -25,6 +25,7 @@
 #include "StyleGeneratedImage.h"
 
 #include "CSSImageGeneratorValue.h"
+#include "CSSStyleSelector.h"
 #include "RenderObject.h"
 
 namespace WebCore {
@@ -74,6 +75,7 @@ void StyleGeneratedImage::removeClient(RenderObject* renderer)
 
 PassRefPtr<Image> StyleGeneratedImage::image(RenderObject* renderer, const IntSize& size) const
 {
+    renderer->document()->styleSelector()->setStyle(renderer->style());
     return m_generator->image(renderer, size);
 }
 
